--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                     <li class="signup-inactive"><a class="btn">Sign up </a></li>
                 </ul>
             </div>
+
             <div ng-app ng-init="checked = false">
                 <form class="form-signin" action="" method="post" name="form">
                     <label for="username">Username</label>
@@ -31,17 +32,20 @@
                 </form>
                 
                 <form class="form-signup" action="" method="post" name="form">
-                    <label for="fullname">Full name</label>
-                    <input class="form-styling" type="text" name="fullname" placeholder=""/>
+                    <label for="fullname">Username</label>
+                    <input class="form-styling" type="text" name="username-signup" placeholder=""/>
                     <label for="email">Email</label>
                     <input class="form-styling" type="text" name="email" placeholder=""/>
                     <label for="password">Password</label>
-                    <input class="form-styling" type="password" name="password" placeholder=""/>
+                    <input class="form-styling" type="password" name="password-signup" placeholder=""/>
                     <label for="confirmpassword">Confirm password</label>
                     <input class="form-styling" type="password" name="confirmpassword" placeholder=""/>
+                    <div class="passAlert" id="passAlert">
+                        <p>Passwords do not match.</p>
+                    </div>
                     <a ng-click="checked = !checked" class="btn-signup">Sign Up</a>
                 </form>
-            
+
                 <div  class="success">
                     <svg width="270" height="270" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 60 60" id="check" ng-class="checked ? 'checked' : ''">
                     <path fill="#ffffff" d="M40.61,23.03L26.67,36.97L13.495,23.788c-1.146-1.147-1.359-2.936-0.504-4.314
@@ -80,6 +84,7 @@
     </div>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.14/angular.min.js"></script>
+    <script src="asset/js/login.js"></script>
     <script src="asset/js/script.js"></script>
 </body>
 </html>
