--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <div class="cover-photo"></div>
                 <div class="profile-photo"></div>
                 <h1 class="welcome">Welcome, Chris</h1>
-                <a class="btn-goback" value="Refresh" onClick="history.go()">Go back</a>
+                <a class="btn-goback" value="Refresh" href="game-screen.html">Continue to game</a>
             </div>
         </div>
         
